Modified mostly interface

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -33,5 +33,26 @@ en:
     other: "Other"
     margin: "Margin"
     revenue: "Revenue"
+    state: "State"
   flash:
     wrong_login: "Wrong email or password"
+  opportunities:
+    title: "Pipeline"
+    new_opportunity: "New opportunity"
+    client: "Client"
+    seller: "Seller"
+    closing_date: "Closing date"
+    total_margin: "Total margin"
+    total_revenue: "Total revenue"
+    weighted_margin: "Weighted margin"
+    weighted_revenue: "Weighted revenue"
+    probability: "Probability"
+  offices:
+    title: "Offices"
+    budget: "Budget"
+    current_margin: "Current margin"
+    current_revenue: "Current revenue"
+    pipeline_margin: "Margin in pipeline"
+    pipeline_revenue: "Revenue in pipeline"
+    estimated_margin: "Estimated margin"
+    estimated_revenue: "Estimated revenue"
